# mobile_base_modelling

./: CMakeLists.txt  package.xml
include/controller/: mecanum_omni_base_controller.h  mobile_base_controller.h  trajectory_planner.h  unicycle_base_controller.h
include/kinematics_mobile_base/: mecanum_omni_base.h  mobile_base.h  unicycle_base.h
launch/locomotion/motion_planning/: start_smooth_motion.launch  start_tracking_line_path.launch  velocity_smoother.launch
launch/locomotion/motion_planning/analysis/: show_cmds_analysis.launch  show_traj_analysis.launch
launch/platform/devices/sensors/: start_sensors.launch
launch/platform/devices/sensors/camera/usb_cam/: start_usb_cam.launch
launch/platform/devices/sensors/depth_cam/xtion/: start_xtion_registered.launch
launch/platform/devices/sensors/imu/gy85/: start_imu_yaw.launch
launch/platform/devices/transforms/: publish_transforms.launch
launch/platform/mobile_base/: mecanum_mobile_base.launch
launch/visualization/: show_odometry.launch
launch/visualization/images/: show_image.launch
launch/visualization/imu/: show_imu_visualization.launch
launch/visualization/lidar/: show_lidar.launch
launch/visualization/motion/: compare_cmd_vels.launch  show_smooth_twist.launch  show_speed.launch
launch/visualization/navigation/: show_navigation.launch
launch/visualization/rviz/: kinematics.rviz  laser_scan.rviz  mapping.rviz  navigation.rviz  navigation_traj_planner.rviz  odom.rviz
scripts/controller/: omni_teleop_key.py
scripts/device/: imu_auto.py
scripts/visualization/: display_3D_visualization.py  plot_traj_profile.py  plot_traj_profile_XY.py
src/controller/: reactive_controller.cpp  velocity_smoother.cpp
src/mobile_base/: fake_wheel_encoder_node.cpp  mecanum_mobile_base_node.cpp
src/perception/: perception_imu_rgb_node.cpp  perception_lidar_node.cpp  perception_rgb_node.cpp  test_synchronization.cpp
src/test/: base_velocity_controller.cpp  motor_velocity_controller.cpp  unicycle_controller_node.cpp
udev/: create_udev_rules.sh  hls.rules  rplidar.rules
